Airflow test k8s/airflow-k8s-deploy/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow
  labels:
    app: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
  template:
    metadata:
      labels:
        app: airflow
    spec:
      containers:
        - name: webserver
          image: apache/airflow:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: dags
              mountPath: /opt/airflow/dags
        - name: git-sync
          image: k8s.gcr.io/git-sync/git-sync:v3.1.7
          volumeMounts:
            - name: dags
              mountPath: /dags
      volumes:
        - name: dags
          persistentVolumeClaim:
            claimName: airflow-dags-pvc
