Airflow test k8s/airflow-k8s-deploy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: airflow
